# DockerContainers

./: .editorconfig  .gitignore  .markdownlint.jsonc  .markdownlint.yml  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yml  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE.md  LINTING.md  MANUAL.md  Makefile  README.md
docs/: README.md  linting.md  services-overview.md  testing.md  troubleshooting.md
opensearch/: README.md  docker-compose.yml
opensearch/config/: opensearch.yml
postgresql/: README.md  docker-compose.yml
redis/: README.md  docker-compose.multi-redis.yml  docker-compose.yml
redis/config/: redis.conf
scripts/: backup.sh  lint.sh  restore.sh  setup.sh  start-all.sh  status.sh  stop-all.sh
src/gui/tui/: .gitignore  CHANGELOG.md  DEPENDENCIES.md  DEVELOPMENT.md  Makefile  README.md  dev.requirements.in  dev.requirements.txt  pyproject.toml  pytest.ini  requirements.in  requirements.txt  ruff.toml  test.requirements.in  test.requirements.txt  test_components.py  verify_imports.py
src/gui/tui/.scripts/: install-dev.sh  install-test.sh  install.sh  sync-pyproject-deps.py
src/gui/tui/src/: __init__.py  main.py
src/gui/tui/src/config/: services.py
src/gui/tui/src/services/: command_executor.py  docker_client.py
src/gui/tui/src/tui/: __init__.py  app.py
src/gui/tui/src/tui/screens/: confirmation.py  log_viewer.py  operations.py  service_details.py  service_list.py
src/gui/tui/src/utils/: helpers.py
src/gui/tui/tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test_app.py  test_async_flows.py  test_command_executor.py  test_docker_client.py  test_error_flows.py  test_helpers.py  test_integration.py  test_main.py  test_screen_confirmation.py  test_screen_details_confirmation.py  test_screen_log_viewer.py  test_screen_operations.py  test_screen_service_details.py  test_screen_service_list.py  test_services.py  test_state_transitions.py
src/gui/web/: MANUAL_TESTING.md  Makefile  PROJECT_SPECIFIC.md  QUICKSTART.md  README.md  TESTING.md  TEST_STATUS.md  docker-compose.yml
src/gui/web/client/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/gui/web/client/coverage/: index.html  lcov.info
src/gui/web/client/coverage/lcov-report/: index.html
src/gui/web/client/coverage/src/: App.tsx.html  index.html
src/gui/web/client/src/: App.tsx
src/gui/web/client/src/components/: ContainerCard.tsx  ContainerDetailsModal.tsx  ContainerList.tsx  Dashboard.tsx  Dialog.tsx  ServiceCard.tsx  ServiceDetailsModal.tsx  ServiceList.tsx  SystemInfo.tsx  SystemInfoServices.tsx
src/gui/web/client/src/hooks/: useApi.ts  useServices.ts  useWebSocket.ts
src/gui/web/client/src/services/: api.ts  servicesApi.ts
src/gui/web/client/tests/: README.md  global-setup.ts  setup-integration.ts  setup.ts
src/gui/web/client/tests/components/: App.test.tsx  ContainerCard.test.tsx  (+8 more)
src/gui/web/scripts/: dev.sh  start.sh  stop.sh
src/gui/web/server/: .eslintrc.json  .gitignore  Dockerfile  example.env  package-lock.json  package.json  tsconfig.json  vitest.config.ts
src/gui/web/server/src/: index.ts
src/gui/web/server/tests/: README.md  TEST_SUMMARY.md  setup.ts
src/gui/web/shared/: project-config.ts  services.js  services.ts  types.ts  utils.ts
src/network/: README.md  docker-compose.yml  example.env
src/opensearch/: README.md  docker-compose.yml  example.env
src/postgresql/: README.md  docker-compose.yml  example.env
src/postgresql/config/: postgresql.conf
src/postgresql/initdb.d/: init.sql
src/redis/: README.md  example.env
test/: README.md  test.sh
(+70 files in other folders)
