[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-tui"
version = "0.1.0"
description = "Terminal UI for Docker Container Management"
authors = [{ name = "Arkiralor", email = "prithoo11335@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.50.0",
  "docker>=7.0.0",
  "click>=8.1.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
]

[project.scripts]
docker-tui = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
