[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-tui"
version = "0.1.0"
description = "Terminal UI for Docker Container Management"
authors = [{ name = "Arkiralor", email = "prithoo11335@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "textual>=8.0.0",
  "docker>=7.0.0",
  "click>=8.1.0",
  "pyyaml>=6.0.1",
  "rich>=14.3.2",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.2",
  "pytest-mock>=3.11.1",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.3.1",
  "pytest-asyncio>=1.3.0",
]
dev = [
  "pytest>=9.0.2",
  "pytest-mock>=3.11.1",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.3.1",
  "pytest-asyncio>=1.3.0",
  "black>=26.1.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
]

[project.scripts]
docker-tui = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ["-v", "--strict-markers", "--tb=short", "--disable-warnings"]
markers = [
  "unit: Unit tests that don't require external dependencies",
  "integration: Integration tests that may require Docker",
  "slow: Tests that take longer to run",
  "docker: Tests that require Docker daemon running",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/conftest.py", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "@abstractmethod",
]
precision = 2
show_missing = true

[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py314"
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line too long (handled by black)
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]
exclude = [".git", ".venv", "venv", "build", "dist", "__pycache__"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"] # Allow assert in tests

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["docker.*", "textual.*"]
ignore_missing_imports = true
